# django-api-boilerplate

./: .dockerignore  .gitignore  Dockerfile  Pipfile  dev.docker-compose.yml  docker-compose.yml  flake8.ini  install_git_hooks.sh  package.sh  pyproject.toml
docker/: entrypoint.sh  service.web.sh
docker/ci/: Dockerfile  docker-compose.yml
docker/development/: Dockerfile  entrypoint.sh
git_hooks/: pre-commit
project/: config_example.env  conftest.py  flowerconfig.py  public_urls.py
project/api/: messages.py  metadata.py  permissions.py  serializers.py  urls.py  viewsets.py
project/api/accounts/: authentication.py  urls.py  viewsets.py
project/api/emails/: urls.py  viewsets.py
project/api/utils/: urls.py  viewsets.py
project/api/webhooks/: urls.py  viewsets.py
project/api_admin/: options.py  sites.py  utils.py
project/api_admin/fields/: readonly.py
project/api_admin/serializers/: __init__.py  default.py  model.py  user.py
project/api_admin/views/: __init__.py  add.py  change.py  changelist.py  core.py  csrftoken.py  delete.py  detail.py  handle_action.py  history.py  list.py  mixins.py  user.py
project/apps/: __init__.py  signals.py
project/celeryapp/: app.py  utils.py
project/clients/: __init__.py  facebook.py  paybox.py
project/main/: asgi.py  settings.py  urls.py  wsgi.py
project/static/: package.json
project/utils/: admin.py  cache.py  core.py  db.py  drf.py  field_tracker.py  fields.py  files.py  i18n.py  json.py  middleware.py  models.py  signals.py  simple_history.py  storages.py  tasks.py  timezone.py  urls.py
(+124 files in other folders)
